--- a/app/globals.css
+++ b/app/globals.css
@@ -2,9 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+input {
+  @apply w-[350px] rounded-lg border py-2 px-6;
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
+  --background-start-rgb: 255, 255, 255;
   --background-end-rgb: 255, 255, 255;
 }
 
